# ComfyUI-MultiModal-Prompt-Nodes

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  import_utils.py  local_gguf_utils.py  nodes.py  pyproject.toml  qwen_api_models.py  qwen_nodes.py  requirements.txt  vision_llm_node.py  wan_nodes.py
.github/workflows/: publish.yml
backends/: README.md  __init__.py
examples/: README.md
web/: mmproj_filter.js
