[project]
name = "multimodal-prompt-nodes"
description = "Advanced multimodal prompt generation nodes for ComfyUI with local GGUF models (Qwen-VL) and cloud API support for vision-based prompt enhancement."
version = "1.0.6"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
  "llama-cpp-python>=0.3.16",
  "dashscope>=1.20.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/kantan-kanto/ComfyUI-MultiModal-Prompt-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kantan-kanto/ComfyUI-MultiModal-Prompt-Nodes/blob/main/README.md"
"Bug Tracker" = "https://github.com/kantan-kanto/ComfyUI-MultiModal-Prompt-Nodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MultiModal-Prompt-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

